// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`manager/gitlabci/extract extractAllPackageFiles() extracts multiple image lines 1`] = `
Array [
  Object {
    "deps": Array [
      Object {
        "autoReplaceStringTemplate": "{{depName}}{{#if newValue}}:{{newValue}}{{/if}}{{#if newDigest}}@{{newDigest}}{{/if}}",
        "currentDigest": undefined,
        "currentValue": "2.5.0",
        "datasource": "docker",
        "depName": "ruby",
        "depType": "image",
        "replaceString": "ruby:2.5.0",
      },
      Object {
        "autoReplaceStringTemplate": "{{depName}}{{#if newValue}}:{{newValue}}{{/if}}{{#if newDigest}}@{{newDigest}}{{/if}}",
        "currentDigest": undefined,
        "currentValue": "latest",
        "datasource": "docker",
        "depName": "hadolint/hadolint",
        "depType": "image",
        "replaceString": "hadolint/hadolint:latest",
      },
      Object {
        "autoReplaceStringTemplate": "{{depName}}{{#if newValue}}:{{newValue}}{{/if}}{{#if newDigest}}@{{newDigest}}{{/if}}",
        "currentDigest": undefined,
        "currentValue": "latest",
        "datasource": "docker",
        "depName": "docker",
        "depType": "image",
        "replaceString": "docker:latest",
      },
      Object {
        "autoReplaceStringTemplate": "{{depName}}{{#if newValue}}:{{newValue}}{{/if}}{{#if newDigest}}@{{newDigest}}{{/if}}",
        "currentDigest": undefined,
        "currentValue": "dind",
        "datasource": "docker",
        "depName": "docker",
        "depType": "service-image",
        "replaceString": "docker:dind",
      },
      Object {
        "autoReplaceStringTemplate": "{{depName}}{{#if newValue}}:{{newValue}}{{/if}}{{#if newDigest}}@{{newDigest}}{{/if}}",
        "currentDigest": undefined,
        "currentValue": "latest",
        "datasource": "docker",
        "depName": "docker",
        "depType": "image",
        "replaceString": "docker:latest",
      },
      Object {
        "autoReplaceStringTemplate": "{{depName}}{{#if newValue}}:{{newValue}}{{/if}}{{#if newDigest}}@{{newDigest}}{{/if}}",
        "currentDigest": undefined,
        "currentValue": "dind",
        "datasource": "docker",
        "depName": "docker",
        "depType": "service-image",
        "replaceString": "docker:dind",
      },
      Object {
        "autoReplaceStringTemplate": "{{depName}}{{#if newValue}}:{{newValue}}{{/if}}{{#if newDigest}}@{{newDigest}}{{/if}}",
        "currentDigest": undefined,
        "currentValue": "1.15",
        "datasource": "docker",
        "depName": "image-name-test",
        "depType": "image-name",
        "replaceString": "image-name-test:1.15",
      },
    ],
    "packageFile": "lib/manager/gitlabci/__fixtures__/gitlab-ci.yaml",
  },
]
`;

exports[`manager/gitlabci/extract extractAllPackageFiles() extracts multiple image lines with comments 1`] = `
Array [
  Object {
    "deps": Array [
      Object {
        "autoReplaceStringTemplate": "{{depName}}{{#if newValue}}:{{newValue}}{{/if}}{{#if newDigest}}@{{newDigest}}{{/if}}",
        "currentDigest": undefined,
        "currentValue": "19.70.8-slim",
        "datasource": "docker",
        "depName": "renovate/renovate",
        "depType": "image-name",
        "replaceString": "renovate/renovate:19.70.8-slim",
      },
      Object {
        "autoReplaceStringTemplate": "{{depName}}{{#if newValue}}:{{newValue}}{{/if}}{{#if newDigest}}@{{newDigest}}{{/if}}",
        "currentDigest": undefined,
        "currentValue": "10.4.11",
        "datasource": "docker",
        "depName": "mariadb",
        "depType": "service-image",
        "replaceString": "mariadb:10.4.11",
      },
      Object {
        "autoReplaceStringTemplate": "{{depName}}{{#if newValue}}:{{newValue}}{{/if}}{{#if newDigest}}@{{newDigest}}{{/if}}",
        "currentDigest": undefined,
        "currentValue": "1.0.0",
        "datasource": "docker",
        "depName": "other/image",
        "depType": "service-image",
        "replaceString": "other/image:1.0.0",
      },
    ],
    "packageFile": "lib/manager/gitlabci/__fixtures__/gitlab-ci.1.yaml",
  },
]
`;

exports[`manager/gitlabci/extract extractAllPackageFiles() extracts multiple included image lines 1`] = `
Array [
  Object {
    "deps": Array [
      Object {
        "autoReplaceStringTemplate": "{{depName}}{{#if newValue}}:{{newValue}}{{/if}}{{#if newDigest}}@{{newDigest}}{{/if}}",
        "currentDigest": undefined,
        "currentValue": "19.70.8-slim",
        "datasource": "docker",
        "depName": "renovate/renovate",
        "depType": "image-name",
        "replaceString": "renovate/renovate:19.70.8-slim",
      },
      Object {
        "autoReplaceStringTemplate": "{{depName}}{{#if newValue}}:{{newValue}}{{/if}}{{#if newDigest}}@{{newDigest}}{{/if}}",
        "currentDigest": undefined,
        "currentValue": "10.4.11",
        "datasource": "docker",
        "depName": "mariadb",
        "depType": "service-image",
        "replaceString": "mariadb:10.4.11",
      },
      Object {
        "autoReplaceStringTemplate": "{{depName}}{{#if newValue}}:{{newValue}}{{/if}}{{#if newDigest}}@{{newDigest}}{{/if}}",
        "currentDigest": undefined,
        "currentValue": "1.0.0",
        "datasource": "docker",
        "depName": "other/image",
        "depType": "service-image",
        "replaceString": "other/image:1.0.0",
      },
    ],
    "packageFile": "lib/manager/gitlabci/__fixtures__/gitlab-ci.3.yaml",
  },
  Object {
    "deps": Array [
      Object {
        "autoReplaceStringTemplate": "{{depName}}{{#if newValue}}:{{newValue}}{{/if}}{{#if newDigest}}@{{newDigest}}{{/if}}",
        "currentDigest": undefined,
        "currentValue": "12",
        "datasource": "docker",
        "depName": "node",
        "depType": "image",
        "replaceString": "node:12",
      },
    ],
    "packageFile": "lib/manager/gitlabci/__fixtures__/include.1.yml",
  },
  Object {
    "deps": Array [
      Object {
        "autoReplaceStringTemplate": "{{depName}}{{#if newValue}}:{{newValue}}{{/if}}{{#if newDigest}}@{{newDigest}}{{/if}}",
        "currentDigest": undefined,
        "currentValue": "3.11",
        "datasource": "docker",
        "depName": "alpine",
        "depType": "image",
        "replaceString": "alpine:3.11",
      },
    ],
    "packageFile": "lib/manager/gitlabci/__fixtures__/include.yml",
  },
]
`;
